--- a/src/app/pages/createProduct/createProduct.component.html
+++ b/src/app/pages/createProduct/createProduct.component.html
@@ -205,10 +205,15 @@
                </div>
             </div>
             <div class="row buttons-row">
-               <div class="col-md-4 col-sm-4 m-auto"><button type="button"
+               <div *ngIf="loadingDel == false" class="col-md-4 col-sm-4 m-auto"><button type="button" (click)="cancel()"
                      class="btn btn-outline-danger btn-block btn-round">Cancelar</button></div>
-               <div class="col-md-4 col-sm-4 m-auto"><button type="submit"
+                     <div *ngIf="loadingDel == true" class="col-md-4 col-sm-4 m-auto"><button type="button" (click)="cancel()"
+                        class="btn btn-outline-danger btn-block btn-round"><i class="spin icon nc-icon nc-refresh-69"></i></button></div>
+               <div *ngIf="loading == false" class="col-md-4 col-sm-4 m-auto"><button type="submit"
                      class="btn btn-outline-primary btn-block btn-round">Salvar</button></div>
+
+                     <div *ngIf="loading == true" class="col-md-4 col-sm-4 m-auto"><button type="submit"
+                        class="btn btn-outline-primary btn-block btn-round"><i class="spin icon nc-icon nc-refresh-69"></i></button></div>
             </div>
          </form>
          </div>
