--- a/src/app/pages/productDetail/productDetail.component.html
+++ b/src/app/pages/productDetail/productDetail.component.html
@@ -63,13 +63,8 @@
                   </select>
                 </div>
                 <div *ngIf="orderForm.value.cdServico != 'Retirar em mãos'" class="col-md-2 col-sm-6">  
-                  <h6>Quantidade</h6>
-                  <select name="amount" formControlName="amount" class="form-control border-input"> 
-                    <option value=1>1</option>
-                    <option value=2>2</option>
-                    <option value=3>3</option>
-                    <option value=4>+3</option>
-                    </select>
+                  <h6>Quantidade</h6> 
+                    <input oninput="validity.valid||(value='');" name="amount" formControlName="amount" type="number" min="0" class="form-control border-input" placeholder="1">
                   </div>
                 <div class="info">
               <div *ngIf="loadingCor==false && orderForm.value.cdServico != 'Retirar em mãos'" (click)="calcDelivery()" style="cursor: pointer;" class="col-md-2"><i class="icon nc-icon nc-delivery-fast"></i><span>Calcular &nbsp;</span></div> 
