--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -73,7 +73,7 @@
        </div>
       </div>
    </div>
-   <div #encomenda class="section landing-section">
+   <div *ngIf="loading==false" #encomenda class="section landing-section">
     <div class="container">
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
