--- a/src/app/pages/orderDetail/orderDetail.component.html
+++ b/src/app/pages/orderDetail/orderDetail.component.html
@@ -62,7 +62,7 @@
               </div>
               <div class="col-md-3">
                 <h6>Frete</h6>
-                <p>{{ order.deliverPrice }}</p>
+                <p>{{ order.deliverPrice | number:'1.2-5' | numberFormat }}</p>
               </div>
             </div>
         <div *ngIf="order.quoteOrder==true" class="form-group row">
@@ -86,7 +86,7 @@
         </div>
         <div class="col-md-3">
           <h6>Preço</h6>
-          <p>{{ order.productData[0].price }}</p>
+          <p>{{ order.productData[0].price | number:'1.2-5' | numberFormat }}</p>
         </div> 
         </div> 
         <div class="form-group row">
