--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -24,8 +24,8 @@
         <br>
         <br>
       </div>
-      <div *ngIf="loading==false" #trabalhos class="section section-gray">
-         <div class="container">
+      <div #trabalhos class="section section-gray">
+         <div *ngIf="loading==false" class="container">
            <div class="row">
              <div class="col-md-3">
                <div class="card card-refine">
@@ -57,8 +57,8 @@
                                  <div class="card-description">
                                     <h5 class="card-title">{{ product.title }}</h5>
                                  </div>
-                                 <div class="price">
-                                    <h5>R$ {{ product.price }}</h5>
+                                 <div class="price"> 
+                                    <h5>R$ {{ product.price | number:'1.2-5' | numberFormat }}</h5>
                                  </div>
                               </div>
                            </div>
@@ -73,94 +73,94 @@
        </div>
       </div>
    </div>
-   <div *ngIf="loading==false" #encomenda class="section landing-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="text-center">Tem um projeto para imprimir?</h2>
-                <h3 class="text-center">Faça um orçamento</h3>
-                <form class="contact-form" [formGroup]="orderForm" (ngSubmit)="createOrder()">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <label>Nome</label>
-                            <span *ngIf="(orderForm.controls['clientName'].invalid && (orderForm.controls['clientName'].dirty || orderForm.controls['clientName'].touched)) && orderForm.controls['clientName'].errors.required" class="text-danger"> é obrigatório.</span>
-                            <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                                <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
-                                </div>
-                                <input name="clientName" formControlName="clientName" type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" required="required">
+   <div #encomenda class="section landing-section">
+    <div *ngIf="loading==false" class="container">
+      <div class="row">
+        <div class="col-md-8 mr-auto ml-auto">
+            <h2 class="text-center">Tem um projeto para imprimir?</h2>
+            <h3 class="text-center">Faça um orçamento</h3>
+            <form class="contact-form" [formGroup]="orderForm" (ngSubmit)="createOrder()">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Nome</label>
+                        <span *ngIf="(orderForm.controls['clientName'].invalid && (orderForm.controls['clientName'].dirty || orderForm.controls['clientName'].touched)) && orderForm.controls['clientName'].errors.required" class="text-danger"> é obrigatório.</span>
+                        <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
                             </div>
+                            <input name="clientName" formControlName="clientName" type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" required="required">
                         </div>
-                        <div class="col-md-6">
-                            <label>Email</label>
-                                <span *ngIf="(orderForm.controls['clientEmail'].invalid && (orderForm.controls['clientEmail'].dirty || orderForm.controls['clientEmail'].touched)) && orderForm.controls['clientEmail'].errors.required" class="text-danger"> é obrigatório.</span>
-                            <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-                                <div class="input-group-prepend">
-                                  <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
-                                </div>
-                                <input name="clientEmail" formControlName="clientEmail" type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
+                    </div>
+                    <div class="col-md-6">
+                        <label>Email</label>
+                            <span *ngIf="(orderForm.controls['clientEmail'].invalid && (orderForm.controls['clientEmail'].dirty || orderForm.controls['clientEmail'].touched)) && orderForm.controls['clientEmail'].errors.required" class="text-danger"> é obrigatório.</span>
+                        <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
                             </div>
+                            <input name="clientEmail" formControlName="clientEmail" type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
                         </div>
-                        <div class="col-md-6">
-                            <label>Whatsapp</label>
-                            <span *ngIf="(orderForm.controls['clientPhone'].invalid && (orderForm.controls['clientPhone'].dirty || orderForm.controls['clientPhone'].touched)) && orderForm.controls['clientPhone'].errors.required" class="text-danger"> é obrigatório.</span>
-                            <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-                                <div class="input-group-prepend">
-                                  <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
-                                </div>
-                                <input mask="(00) 00000-0000" name="clientPhone" formControlName="clientPhone" type="text" class="form-control" placeholder="(DDD) Número" (focus)="focus1=true" (blur)="focus1=false" >
+                    </div>
+                    <div class="col-md-6">
+                        <label>Whatsapp</label>
+                        <span *ngIf="(orderForm.controls['clientPhone'].invalid && (orderForm.controls['clientPhone'].dirty || orderForm.controls['clientPhone'].touched)) && orderForm.controls['clientPhone'].errors.required" class="text-danger"> é obrigatório.</span>
+                        <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
                             </div>
+                            <input mask="(00) 00000-0000" name="clientPhone" formControlName="clientPhone" type="text" class="form-control" placeholder="(DDD) Número" (focus)="focus1=true" (blur)="focus1=false" >
                         </div>
-                    
-                    
-                    <div class="col-md-8">
-                        <label>Tem imagens ou um modelo 3D?</label>
-                        <div>
-                            <input style="display: none;" (change)="uploadFile($event)" type="file" multiple
-                                    class="form-control-file" #onUpload>
-                            <button type="button" (click)="onUpload.click()" class="btn btn-danger btn-fill btn-sm">Fazer upload</button>
-                        </div>
-                        <div  class="mt-1 col-md-12 row">
-                            <div *ngFor="let file of filesToUpload; ; let i=index" class="m-2 mr-4">
-                                <div class="info">
-                                    <i class="icon nc-icon nc-app"></i> 
-                                </div>
-                                    <p>{{ file.fileName }}</p>
-                                    <a (click)="removeFile(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
+                    </div>
+                
+                
+                <div class="col-md-8">
+                    <label>Tem imagens ou um modelo 3D?</label>
+                    <div>
+                        <input style="display: none;" (change)="toUploadFile($event)" type="file" multiple
+                                class="form-control-file" #onUpload>
+                        <button type="button" (click)="onUpload.click()" class="btn btn-danger btn-fill btn-sm">Fazer upload</button>
+                    </div>
+                    <div  class="mt-1 col-md-12 row">
+                        <div *ngFor="let file of filesToUpload; ; let i=index" class="m-2 mr-4">
+                            <div class="info">
+                                <i class="icon nc-icon nc-app"></i> 
                             </div>
+                                <p>{{ file.name }}</p>
+                                <a (click)="removeFile(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
                         </div>
-                        <div  class="mt-1 col-md-12 row">
-                            <div *ngFor="let image of imagesToUpload; ; let i=index" class="m-2 mr-4">
-                                <div class="info">
-                                    <i class="icon nc-icon nc-image"></i> 
-                                </div>
-                                    <p>{{ image.fileName }}</p>
-                                    <a (click)="removeImage(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
+                    </div>
+                    <div  class="mt-1 col-md-12 row">
+                        <div *ngFor="let image of imagesToUpload; ; let i=index" class="m-2 mr-4">
+                            <div class="info">
+                                <i class="icon nc-icon nc-image"></i> 
                             </div>
+                                <p>{{ image.name }}</p>
+                                <a (click)="removeImage(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
                         </div>
                     </div>
                 </div>
-                <br>
-                    <label>Conte sobre o seu projeto, iremos adorar poder tirar as suas ideias do papel!!!</label>
-                    <textarea name="notes" formControlName="notes" class="form-control" rows="4" placeholder="Nos diga o que está planejando..."></textarea>
-                    <div class="row">
-                        <div class="col-md-12 mr-auto ml-auto">
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input name="allowContact" formControlName="allowContact" class="form-check-input" type="checkbox" value=""> De acordo com as Leis 12.965/2014 e 13.709/2018, que regulam o uso da internet e tratamento de dados pessoais no Brasil, ao solicitar o serviço autorizo &lt;BeMaker&gt; a entrar em contato por e-mail e Whatsapp e concordo com a sua política de privacidade.  
-                                    <span class="form-check-sign"></span>
-                                </label>
-                            </div>
-                            <button type="submit" class="btn btn-danger btn-lg btn-fill">Fazer orçamento</button>
-                            <div *ngIf="loading==true" id="loading-wrapper">
-                                <div id="loading-text">Carregando</div>
-                                <div id="loading-content"></div>
-                              </div>
-                        </div>
-                    </div>
-                </form>
             </div>
+            <br>
+                <label>Conte sobre o seu projeto, iremos adorar poder tirar as suas ideias do papel!!!</label>
+                <textarea name="notes" formControlName="notes" class="form-control" rows="4" placeholder="Nos diga o que está planejando..."></textarea>
+                <div class="row">
+                    <div class="col-md-12 mr-auto ml-auto">
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input name="allowContact" formControlName="allowContact" class="form-check-input" type="checkbox" value=""> De acordo com as Leis 12.965/2014 e 13.709/2018, que regulam o uso da internet e tratamento de dados pessoais no Brasil, ao solicitar o serviço autorizo &lt;BeMaker&gt; a entrar em contato por e-mail e Whatsapp e concordo com a sua política de privacidade.  
+                                <span class="form-check-sign"></span>
+                            </label>
+                        </div>
+                        <button type="submit" class="btn btn-danger btn-lg btn-fill">Fazer orçamento</button>
+                        <div *ngIf="loading==true" id="loading-wrapper">
+                            <div id="loading-text">Enviando</div>
+                            <div id="loading-content"></div>
+                          </div>
+                    </div>
+                </div>
+            </form>
         </div>
+      </div>
     </div>
 </div>
 
