--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -58,7 +58,7 @@
                                     <h5 class="card-title">{{ product.title }}</h5>
                                  </div>
                                  <div class="price"> 
-                                    <h5>R$ {{ product.price | number:'1.2-5' | numberFormat }}</h5>
+                                    <h5>R$ {{ product.price | numberFormat }}</h5>
                                  </div>
                               </div>
                            </div>
