--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -53,19 +53,19 @@
                         target="_blank" class="nav-link">Have an issue</a>
                 </li>
                 
-                <li *ngIf="user.get('token') && user.get('name') && user.get('permissions')" class="nav-item ">
+                <li *ngIf="user.get('token') && user.get('name') && user.get('permissions')" class="nav-item">
                     <div ngbDropdown class="dropdown" placement="bottom-left">
 
-                        <a style="cursor: pointer;" class="nav-link" id="dropdownBasic3" ngbDropdownToggle><i class="nc-icon nc-settings-gear-65" aria-hidden="true"></i> {{ user.get("name") }}</a>
+                        <a style="cursor: pointer;" class="nav-link" [ngClass]="sidebarVisible == true ? 'nav-link text-muted' : 'nav-link'" id="dropdownBasic3" ngbDropdownToggle><i class="nc-icon nc-settings-gear-65" aria-hidden="true"></i> {{ user.get("name") }}</a>
                         
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic3" class="dropdown-danger dropdown-menu-right">
-                            <a [routerLink]="['/encomendas']" class="dropdown-item">Listagem de Encomendas</a>
+                            <a [routerLink]="['/encomendas']" [ngClass]="sidebarVisible == true ? 'dropdown-item text-muted' : 'dropdown-item'">Listagem de Encomendas</a>
                             <div class="dropdown-divider"></div>
-                            <a *ngIf="userPermissions.includes('update:user')" [routerLink]="['/funcionarios']" class="dropdown-item">Listagem de Usuários</a>
+                            <a *ngIf="userPermissions.includes('update:user')" [routerLink]="['/funcionarios']" [ngClass]="sidebarVisible == true ? 'dropdown-item text-muted' : 'dropdown-item'">Listagem de Usuários</a>
                             <div class="dropdown-divider"></div>
-                            <a *ngIf="userPermissions.includes('create:product')" [routerLink]="['/criar-trabalho']" class="dropdown-item">Criar Produto</a>
+                            <a *ngIf="userPermissions.includes('create:product')" [routerLink]="['/criar-trabalho']" [ngClass]="sidebarVisible == true ? 'dropdown-item text-muted' : 'dropdown-item'">Criar Produto</a>
                             <div class="dropdown-divider"></div>
-                            <a *ngIf="userPermissions.includes('create:user')" [routerLink]="['/signup']" class="dropdown-item">Cadastrar novo Usuário</a>
+                            <a *ngIf="userPermissions.includes('create:user')" [routerLink]="['/signup']" [ngClass]="sidebarVisible == true ? 'dropdown-item text-muted' : 'dropdown-item'">Cadastrar novo Usuário</a>
                         </div>
                     </div>
                 </li>
