--- a/src/app/pages/createProduct/createProduct.component.html
+++ b/src/app/pages/createProduct/createProduct.component.html
@@ -90,7 +90,7 @@
                      <div class="col-md-4 mt-3">
                         <h6>Comprimento embalado</h6>
                         <div class="input-group border-input">
-                           <input name="lengthPacked" formControlName="lengthPacked"
+                           <input name="widthPacked" formControlName="widthPacked"
                            type="number" value="" placeholder="Em cm" class="form-control border-input">
                            <div class="input-group-append"><span
                                  class="input-group-text"></span></div>
@@ -117,7 +117,7 @@
                      <div class="col-md-4 mt-3">
                         <h6>Largura embalado</h6>
                         <div class="input-group border-input">
-                           <input type="number" name="widthPacked" formControlName="widthPacked"
+                           <input type="number" name="lengthPacked" formControlName="lengthPacked"
                               value="" placeholder="Em cm" class="form-control border-input">
                            <div class="input-group-append"><span
                                  class="input-group-text"></span></div>
