Ajustes landing page

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -92,7 +92,7 @@
                         </p>
                     </div>
                     <div class="card-footer text-center">
-                        <button [routerLink]="['/trabalho/1']" type="button" class="btn btn-outline-neutral btn-round btn-sm">Encomendar</button>
+                        <button [routerLink]="['/trabalho/609f39934bd7f41659fc04b2']" type="button" class="btn btn-outline-neutral btn-round btn-sm">Encomendar</button>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                         </p>
                     </div>
                     <div class="card-footer text-center">
-                        <button [routerLink]="['/trabalho/1']" type="button" class="btn btn-outline-neutral btn-round btn-sm">Encomendar</button>
+                        <button [routerLink]="['/trabalho/609f394e4bd7f41659fc04b1']" type="button" class="btn btn-outline-neutral btn-round btn-sm">Encomendar</button>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                         </p>
                     </div>
                     <div class="card-footer text-center">
-                        <button [routerLink]="['/trabalho/1']" type="button" class="btn btn-outline-neutral btn-round btn-sm">Encomendar</button>
+                        <button [routerLink]="['/trabalho/609ee839e0e64bd084955f77']" type="button" class="btn btn-outline-neutral btn-round btn-sm">Encomendar</button>
                     </div>
                 </div>
             </div>
