Ajuste criar e atualizar produto

--- a/src/app/pages/createProduct/createProduct.component.html
+++ b/src/app/pages/createProduct/createProduct.component.html
@@ -70,7 +70,7 @@
                         </div>
                      </div>
                      <div class="col-md-3">
-                        <h6>Largura</h6>
+                        <h6>Comprimento</h6>
                         <div class="input-group border-input">
                            <input name="width" formControlName="width"
                            type="number" value="" placeholder="Em cm" class="form-control border-input">
