--- a/src/app/pages/createProduct/createProduct.component.html
+++ b/src/app/pages/createProduct/createProduct.component.html
@@ -70,9 +70,9 @@
                         </div>
                      </div>
                      <div class="col-md-3">
-                        <h6>Comprimento</h6>
+                        <h6>Largura</h6>
                         <div class="input-group border-input">
-                           <input name="length" formControlName="length"
+                           <input name="width" formControlName="width"
                            type="number" value="" placeholder="Em cm" class="form-control border-input">
                            <div class="input-group-append"><span
                                  class="input-group-text"></span></div>
