--- a/src/app/pages/updateProduct/updateProduct.component.html
+++ b/src/app/pages/updateProduct/updateProduct.component.html
@@ -79,7 +79,7 @@
                         </div>
                      </div>
                      <div class="col-md-3">
-                        <h6>Comprimento</h6>
+                        <h6>Largura</h6>
                         <div class="input-group border-input">
                            <input name="width" formControlName="width"
                            type="number" value="" placeholder="Em cm" class="form-control border-input">
