Adiciona opção de pedido concluído

--- a/src/app/pages/orderDetail/orderDetail.component.html
+++ b/src/app/pages/orderDetail/orderDetail.component.html
@@ -24,8 +24,9 @@
                 <form *ngIf="orderForm" [formGroup]="orderForm">
                   <select formControlName="statusControl" class="form-control border-input">
                     <option value="Pendente">Pendente</option>
-                  <option value="Em Entrega">Em Entrega</option>
-                  <option value="Produto em Produção">Produto em Produção</option>
+                    <option value="Em Entrega">Em Entrega</option>
+                    <option value="Produto em Produção">Produto em Produção</option>
+                    <option value="Pedido Concluído">Pedido Concluído</option>
                   </select>
                  </form>
               </div>
